test_dir/logs_backup/make/00.5/fopen_make_2016-12-01-17:04:35.txt
--------------------------------------------------------------------------------------------
seed: 26900
gcc -c shared.c
seed: 26900
seed: 26900
gcc -o blaster blaster.c shared.o
seed: 26900
seed: 26900
seed: 26900
seed: 26900
gcc -o blastee blastee.c shared.o
seed: 26900
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 26900
seed: 26900
seed: 26900
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19657
gcc -c shared.c
seed: 19657
seed: 19657
gcc -o blaster blaster.c shared.o
seed: 19657
seed: 19657
seed: 19657
seed: 19657
gcc -o blastee blastee.c shared.o
seed: 19657
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 19657
seed: 19657
seed: 19657
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 11762
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 7000
gcc -c shared.c
seed: 7000
seed: 7000
gcc -o blaster blaster.c shared.o
seed: 7000
seed: 7000
seed: 7000
seed: 7000collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19219
gcc -c shared.c
seed: 19219
seed: 19219
gcc -o blaster blaster.c shared.o
seed: 19219
seed: 19219
seed: 19219
seed: 19219collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19763
gcc -c shared.c
seed: 19763
seed: 19763
gcc -o blaster blaster.c shared.o
seed: 19763
seed: 19763
seed: 19763
seed: 19763
gcc -o blastee blastee.c shared.o
seed: 19763
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 19763
seed: 19763
seed: 19763
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 30314
gcc -c shared.c
seed: 30314
seed: 30314
gcc -o blaster blaster.c shared.o
seed: 30314
seed: 30314
seed: 30314
seed: 30314collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 16743
gcc -c shared.c
seed: 16743
seed: 16743
gcc -o blaster blaster.c shared.o
seed: 16743
seed: 16743
seed: 16743
seed: 16743
gcc -o blastee blastee.c shared.o
seed: 16743
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 16743
seed: 16743
seed: 16743
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29404
gcc -c shared.c
seed: 29404
seed: 29404
gcc -o blaster blaster.c shared.o
seed: 29404
seed: 29404
seed: 29404
seed: 29404
gcc -o blastee blastee.c shared.o
seed: 29404
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 29404
seed: 29404
seed: 29404
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 19707
gcc -c shared.c
seed: 19707
seed: 19707
gcc -o blaster blaster.c shared.o
seed: 19707
seed: 19707
seed: 19707
seed: 19707collect2: error: ld returned 1 exit status

make: *** [blaster] Error 1
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 1750
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21770
gcc -c shared.c
seed: 21770
seed: 21770
gcc -o blaster blaster.c shared.o
seed: 21770
seed: 21770
seed: 21770
seed: 21770
gcc -o blastee blastee.c shared.o
seed: 21770
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 21770
seed: 21770
seed: 21770
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 6409
gcc -c shared.c
seed: 6409
seed: 6409
gcc -o blaster blaster.c shared.o
seed: 6409
seed: 6409
seed: 6409
seed: 6409
gcc -o blastee blastee.c shared.o
seed: 6409
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 6409
seed: 6409
seed: 6409
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 16556
gcc -c shared.c
seed: 16556
seed: 16556
gcc -o blaster blaster.c shared.o
seed: 16556
seed: 16556
seed: 16556
seed: 16556
gcc -o blastee blastee.c shared.o
seed: 16556
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 16556
seed: 16556
seed: 16556
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 23972
gcc -c shared.c
seed: 23972
seed: 23972
gcc -o blaster blaster.c shared.o
seed: 23972
seed: 23972
seed: 23972
seed: 23972
gcc -o blastee blastee.c shared.o
seed: 23972
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 23972
seed: 23972
seed: 23972
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 21536
gcc -c shared.c
seed: 21536
seed: 21536
gcc -o blaster blaster.c shared.o
seed: 21536
seed: 21536
seed: 21536
seed: 21536
gcc -o blastee blastee.c shared.o
seed: 21536
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 21536
seed: 21536
seed: 21536
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 6391
gcc -c shared.c
seed: 6391
seed: 6391
gcc -o blaster blaster.c shared.o
seed: 6391
seed: 6391
seed: 6391
seed: 6391
gcc -o blastee blastee.c shared.o
seed: 6391
blastee.c: In function ‘main’:
blastee.c:142:9: warning: format ‘%lld’ expects argument of type ‘long long int’, but argument 3 has type ‘__suseconds_t’ [-Wformat=]
         printf("Time Packet Received: %s ,milliseconds: %lld \n",ctime(&current_time), time_recv.tv_usec/1000);
         ^
seed: 6391
seed: 6391
seed: 6391
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 6513
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 29869
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------
seed: 17148
make: Makefile: Invalid argument
make: *** No targets.  Stop.
--------------------------------------------------------------------------------------------
